feat(excel-rma): Add job buttons and udpated print format
add updated custom print format for print button

add updated naming series and excel serials for stock entry

--- a/packages/rma-frontend/src/app/stock-entry/material-transfer/add-item-dialog.html
+++ b/packages/rma-frontend/src/app/stock-entry/material-transfer/add-item-dialog.html
@@ -1,6 +1,6 @@
 <div mat-dialog-content>
     <p>Please Select a Item?</p>
-    <mat-form-field>
+    <mat-form-field style="width: 100%;">
         <input
       type="text"
       placeholder="Select Item"
