fix(Excel-rma): Fix issue with non-serial item on stock entry
remove bundle item from stock entry item list

add validation for stock entry

--- a/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
+++ b/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
@@ -80,7 +80,7 @@
                                 </mat-select>
                             </mat-form-field>
 
-                            <mat-form-field *ngIf="f.stock_entry_type.value === 'Material Issue'" class="mat-input-wrapper">
+                            <mat-form-field *ngIf="f.stock_entry_type.value !== 'Material Transfer'" class="mat-input-wrapper">
                                 <input
                                   matInput
                                   required
