fix(rma-warranty):Fixed minor bugs in warranty stock entry

--- a/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
@@ -19,7 +19,7 @@
   >
     <ion-fab-button
       class="fab-position"
-      (click)="submitDraft()"
+      (click)="createClaim()"
       [disabled]="warrantyClaimForm.invalid"
     >
       <ion-icon name="add"></ion-icon>
