feat(excel-rma): Add cancelation for material receipt
add injectable component for delivered serials

--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
@@ -199,106 +199,4 @@
     </ion-row>
 </ion-grid>
 
-<ion-card *ngIf="purchaseInvoiceDetails && displayDeliveredSerialsTable">
-    <div class="loading-shade" *ngIf="purchasedSerialsDataSource.loading$ | async">
-        <mat-progress-bar *ngIf="purchasedSerialsDataSource.loading$ | async" mode="indeterminate"></mat-progress-bar>
-    </div>
-
-    <ion-card-header>
-        <ion-row class="align">
-            <ion-col>
-                <ion-card-title>
-                    <ion-text color="tertiary">
-                        Delivered Serials
-                    </ion-text>
-                </ion-card-title>
-            </ion-col>
-            <ion-col class="ion-text-right">
-                <ion-button class="ion-text-right" [disabled]="!this.purchasedSerialsDataSource.length" color="tertiary" (click)="downloadSerials()">
-                    Download CSV
-                </ion-button>
-                <ion-button class="ion-text-right" [disabled]="readonly" color="tertiary" (click)="getDeliveredSerials()">
-                    Get Serials
-                </ion-button>
-            </ion-col>
-        </ion-row>
-    </ion-card-header>
-
-    <ion-card-content class="ion-no-padding">
-        <div class="search-models ion-padding">
-            <mat-form-field class="mat-input-wrapper">
-                <input matInput placeholder="Search" [(ngModel)]="deliveredSerialsSearch" (keyup.enter)="setFilter()" />
-                <button mat-button matSuffix (click)="setFilter()">
-          <mat-icon>search</mat-icon>
-        </button>
-            </mat-form-field>
-        </div>
-        <mat-table #table [dataSource]="purchasedSerialsDataSource" style="width: 100%; max-height: 58vh; overflow: auto;">
-            <ng-container matColumnDef="sr_no">
-                <mat-header-cell *matHeaderCellDef> </mat-header-cell>
-                <mat-cell *matCellDef="let row; let i = index">
-                    {{ i + 1 }}
-                </mat-cell>
-            </ng-container>
-            <!-- Serial No -->
-            <ng-container matColumnDef="serial_no">
-                <mat-header-cell *matHeaderCellDef>Serial No</mat-header-cell>
-                <mat-cell *matCellDef="let row">
-                    <ng-container>
-                        {{ row.serial_no }}
-                    </ng-container>
-                </mat-cell>
-            </ng-container>
-
-            <!-- item_code -->
-            <ng-container matColumnDef="item_name">
-                <mat-header-cell *matHeaderCellDef>Item Name</mat-header-cell>
-                <mat-cell *matCellDef="let row">
-                    <ng-container>
-                        {{ itemMap[row.item_code]?.item_name }}
-                    </ng-container>
-                </mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="purchase_warranty_period">
-                <mat-header-cell *matHeaderCellDef>Purchase Warranty Period [Months]</mat-header-cell>
-                <mat-cell *matCellDef="let row">
-                    <ng-container>
-                        {{ itemMap[row.item_code]?.purchaseWarrantyMonths }}
-                    </ng-container>
-                </mat-cell>
-            </ng-container>
-
-            <!-- purchase_date -->
-            <ng-container matColumnDef="purchase_warranty_expiry">
-                <mat-header-cell *matHeaderCellDef>Purchase Warranty Expiry</mat-header-cell>
-                <mat-cell *matCellDef="let row">
-                    <ng-container>
-                        {{ row.warranty?.purchaseWarrantyDate | date: 'dd-MM-yyyy' }}
-                    </ng-container>
-                </mat-cell>
-            </ng-container>
-
-            <!-- warehouse -->
-            <ng-container matColumnDef="warehouse">
-                <mat-header-cell *matHeaderCellDef>Warehouse</mat-header-cell>
-                <mat-cell *matCellDef="let row">
-                    <ng-container>
-                        {{ row.warehouse }}
-                    </ng-container>
-                </mat-cell>
-            </ng-container>
-
-            <mat-header-row *matHeaderRowDef="deliveredSerialsDisplayedColumns; sticky: true"></mat-header-row>
-            <mat-row *matRowDef="
-          let row;
-          columns: deliveredSerialsDisplayedColumns;
-          let i = index
-        "></mat-row>
-        </mat-table>
-        <mat-card-actions>
-            <mat-paginator #paginator class="mat-paginator-sticky" (page)="getUpdate($event)" [length]="purchasedSerialsDataSource.length" [pageSizeOptions]="[30, 50, 100, 500]">
-            </mat-paginator>
-        </mat-card-actions>
-    </ion-card-content>
-</ion-card>
+<app-delivered-serials *ngIf="purchaseInvoiceDetails && displayDeliveredSerialsTable"  [deliveredSerialsState]="deliveredSerialsState"></app-delivered-serials>
