feat(excel-rma): Add cancelation for sales flow

--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/view-sales-invoice.page.html
@@ -35,23 +35,23 @@
         <ion-segment-button value="1" *ngIf="status !== 'Canceled' && sales_invoice_name && permissionState.delivery_note.active">
           <ion-label>Serials</ion-label>
         </ion-segment-button>
-        <ion-segment-button value="2" *ngIf="sales_invoice_name">
+        <ion-segment-button value="2" *ngIf="status !== 'Canceled' && sales_invoice_name">
           <ion-label>Accounts</ion-label>
         </ion-segment-button>
         <ion-segment-button
           value="3"
           [disabled]="permissionState.campaign_return.active"
-          *ngIf="sales_invoice_name && showReturnTab && permissionState.sales_return.active"
+          *ngIf="status !== 'Canceled' && sales_invoice_name && showReturnTab && permissionState.sales_return.active"
         >
           <ion-label>Sales Return</ion-label>
         </ion-segment-button>
-        <ion-segment-button value="4" *ngIf="sales_invoice_name && permissionState.warranty_claim.active">
+        <ion-segment-button value="4" *ngIf="status !== 'Canceled' && sales_invoice_name && permissionState.warranty_claim.active">
           <ion-label>Warranty</ion-label>
         </ion-segment-button>
         <ion-segment-button
           value="5"
           disabled="{{isCampaign ? true : false }}"
-          *ngIf="sales_invoice_name && showReturnTab && permissionState.credit_note.active"
+          *ngIf="status !== 'Canceled' && sales_invoice_name && showReturnTab && permissionState.credit_note.active"
         >
           <ion-label>Credit Notes</ion-label>
         </ion-segment-button>
