--- a/packages/rma-frontend/src/app/customer-profile/customer-profile.page.scss
+++ b/packages/rma-frontend/src/app/customer-profile/customer-profile.page.scss
@@ -5,6 +5,15 @@
   overflow: auto;
 }
 
+.example-full-width {
+  width: 50%;
+  color: black;
+}
+
+ion-button {
+  float: right;
+}
+
 table {
   width: 100%;
 }
